--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <!-- link css -->
+    <!-- link-css -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <header>
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lees</h1>
+    <!-- intestazione-della-pagina -->
+    <header class="main-header">
+
+        <!-- logo-con-sfondo -->
+        <section class="my-bg">
+            <img src="./img/logo.svg" alt="logo-pagina" class="logo">
+        </section>
+        
+        <!-- titolo-principale -->
+        <h1 class="page-title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lees</h1>
     </header>
 </body>
 </html>
