--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Booleaner</title>
 
     <!-- link-css -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="page-body">
     <!-- intestazione-della-pagina -->
     <header class="main-header">
 
@@ -17,9 +17,22 @@
         <section class="my-bg">
             <img src="./img/logo.svg" alt="logo-pagina" class="logo">
         </section>
-        
+
         <!-- titolo-principale -->
         <h1 class="page-title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lees</h1>
+
+        <!-- autore -->
+         <p>Scritto da <a href="#">The Booleaner</a> <br>
+            il 10/10/2020
+        </p>
+
+        <!-- corpo-pagina -->
+        <main>
+            <section>
+                <img src="./img/tim-1.jpg" alt="foto-tim-1">
+                <img src="./img/tim-2.jpg" alt="foto-tim-2">
+            </section>
+        </main>
     </header>
 </body>
 </html>
