--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
         <!-- corpo-pagina -->
         <main>
             <section>
-                <img src="./img/tim-1.jpg" alt="foto-tim-1">
-                <img src="./img/tim-2.jpg" alt="foto-tim-2">
+                <figure class="tim-img">
+                    <img src="./img/tim-2.jpg" alt="foto-tim-2">
+                    <img src="./img/tim-1.jpg" alt="foto-tim-1">
+                    <figcaption>1st Photo: John S. and James L. Knight Foundation, by Scott Henricsen <br>
+                                2nd Photo: Wikimedia, by Paul Clarke
+                    </figcaption>
+                </figure>
+
             </section>
         </main>
     </header>
