--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <!-- corpo-pagina -->
         <main>
-            <section>
+            <section class="first-half">
                 <figure class="tim-img">
                     <img src="./img/tim-2.jpg" alt="foto-tim-2">
                     <img src="./img/tim-1.jpg" alt="foto-tim-1">
@@ -37,6 +37,17 @@
                     </figcaption>
                 </figure>
 
+                <p class="main-paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur laudantium hic, expedita est 
+                    vero alias sapiente commodi similique modi repellendus quod fugit doloremque reprehenderit quae in 
+                    asperiores, eaque quidem distinctio!
+                </p>
+
+                <!-- elenco-puntato -->
+                 <ul class="ul">
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos autem amet quas quidem aliquam rerum! Praesentium corrupti impedit rerum hic!</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos autem amet quas quidem aliquam rerum! Praesentium corrupti impedit rerum hic!</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos autem amet quas quidem aliquam rerum! Praesentium corrupti impedit rerum hic!</li>
+                 </ul>
             </section>
         </main>
     </header>
