--- a/index.html
+++ b/index.html
@@ -48,7 +48,32 @@
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos autem amet quas quidem aliquam rerum! Praesentium corrupti impedit rerum hic!</li>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos autem amet quas quidem aliquam rerum! Praesentium corrupti impedit rerum hic!</li>
                  </ul>
-            </section>
+                </section>
+                 <!-- tabella -->
+                 <table>
+                    <thead>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
+                        </tr>
+                    </tbody>
+                 </table>
         </main>
     </header>
 </body>
