--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h1 class="page-title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lees</h1>
 
         <!-- autore -->
-         <p>Scritto da <a href="#">The Booleaner</a> <br>
+         <h2>Scritto da <a class="author" href="#">The Booleaner</a> <br>
             il 10/10/2020
-        </p>
+        </h2>
 
         <!-- corpo-pagina -->
         <main>
@@ -50,31 +50,45 @@
                  </ul>
                 </section>
                  <!-- tabella -->
-                 <table>
-                    <thead>
-                        <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
-                        </tr>
-                        <tr>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
-                        </tr>
-                        <tr>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
-                        </tr>
-                    </tbody>
-                 </table>
+                <section class="second-half">
+
+                    <table>
+                        <thead>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                            <th class="third-row">Lorem ipsum dolor</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Lorem ipsum dolor</td>
+                                <td>Lorem ipsum dolor</td>
+                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
+                            </tr>
+                            <tr>
+                                <td>Lorem ipsum dolor</td>
+                                <td>Lorem ipsum dolor</td>
+                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
+                            </tr>
+                            <tr>
+                                <td>Lorem ipsum dolor</td>
+                                <td>Lorem ipsum dolor</td>
+                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam beatae mollitia vitae unde officia veniam ipsam consequatur expedita sequi aliquid. Perspiciatis consectetur unde delectus deleniti saepe officia quas error iste!
+                    </p>
+                </section>
         </main>
+
+        <!-- piè-di-pagina -->
+         <footer class="page-footer">
+            <h3 class="footer-title">Potrebbero interessarti</h3>
+            <p class="monitor"> <strong>Lorem ipsum dolor lorem</strong></p>
+            <p class="graph"> <strong>Lorem ipsum dolor</strong></p>
+         </footer>
     </header>
 </body>
 </html>
