--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
                  <!-- tabella -->
                 <section class="second-half">
 
-                    <table>
+                    <table class="table">
                         <thead>
                             <th>Lorem ipsum dolor</th>
                             <th>Lorem ipsum dolor</th>
-                            <th class="third-row">Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
                         </thead>
                         <tbody>
-                            <tr>
+                            <tr class="colored-tr">
                                 <td>Lorem ipsum dolor</td>
                                 <td>Lorem ipsum dolor</td>
                                 <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
                             </tr>
-                            <tr>
+                            <tr class="white-tr">
                                 <td>Lorem ipsum dolor</td>
                                 <td>Lorem ipsum dolor</td>
                                 <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
                             </tr>
-                            <tr>
+                            <tr class="colored-tr">
                                 <td>Lorem ipsum dolor</td>
                                 <td>Lorem ipsum dolor</td>
                                 <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, possimus delectus dolorem repellat consequatur repellendus perspiciatis officia harum similique architecto iure quaerat esse nostrum. Debitis dolor accusantium deleniti fugit.</td>
