--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     </figcaption>
                 </figure>
 
-                <p class="main-paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur laudantium hic, expedita est 
-                    vero alias sapiente commodi similique modi repellendus quod fugit doloremque reprehenderit quae in 
-                    asperiores, eaque quidem distinctio!
+                <p class="main-paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque placeat sint molestiae aliquam, commodi at. Culpa odit ratione ducimus molestias aliquam expedita tempora commodi numquam voluptatibus. Repellendus tempora quos odit.
+                Accusantium vel aut explicabo exercitationem aspernatur assumenda reprehenderit illo quam itaque qui, deleniti quis laudantium suscipit a. Amet dicta similique ipsam alias reiciendis deserunt ducimus repudiandae impedit, quos, nisi molestias?
+                Ullam ab at asperiores iste modi maxime porro autem accusamus quia labore sed sunt quasi laborum quisquam iure quidem aut, ex error quis ipsum quibusdam? Natus consequatur quod qui ab.
                 </p>
 
                 <!-- elenco-puntato -->
@@ -54,8 +54,8 @@
 
                     <table class="table">
                         <thead>
-                            <th>Lorem ipsum dolor</th>
-                            <th>Lorem ipsum dolor</th>
+                            <th class="th">Lorem ipsum dolor</th>
+                            <th class="th">Lorem ipsum dolor</th>
                             <th>Lorem ipsum dolor</th>
                         </thead>
                         <tbody>
@@ -77,8 +77,10 @@
                         </tbody>
                     </table>
                     
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam beatae mollitia vitae unde officia veniam ipsam consequatur expedita sequi aliquid. Perspiciatis consectetur unde delectus deleniti saepe officia quas error iste!
+                    <p class="secondary-paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa tenetur, porro harum modi voluptatum nam commodi alias explicabo eum, blanditiis error minima perspiciatis tempore, est ab dolores earum impedit! Cum?
+                        Earum eligendi, reprehenderit consequuntur culpa facilis dolore ipsa libero animi quaerat cum ullam illo similique necessitatibus corporis rerum molestiae omnis expedita adipisci! Impedit ducimus laudantium perferendis consectetur animi dolores aut.
+                        Vero possimus nostrum modi a nesciunt magnam necessitatibus at fugiat, earum veritatis perferendis consequuntur minus reprehenderit hic ipsam tenetur dicta fugit molestiae nam ullam iusto iure et quos.
                     </p>
                 </section>
         </main>
