--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </section>
 
         <!-- titolo-principale -->
-        <h1 class="page-title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lees</h1>
+        <h1 class="page-title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
         
         <!-- autore -->
         <h2>Scritto da <a class="author" href="#">The Booleaner</a> <br>
